# libplist

./: CMakeLists.txt  README.md
src/: plist.c
